fix overflow one line.

--- a/src/components/qiita/QiitaApp.css
+++ b/src/components/qiita/QiitaApp.css
@@ -34,6 +34,7 @@
   font-size: 11px;
 
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
